--- a/_config.yml
+++ b/_config.yml
@@ -46,12 +46,6 @@ staticman:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 
-# SEO Related
-google_site_verification :
-bing_site_verification   :
-alexa_site_verification  :
-yandex_site_verification :
-
 # Social Sharing
 twitter:
   username               : &twitter
@@ -67,7 +61,6 @@ social:
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
 
-
 # Analytics
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
@@ -77,7 +70,7 @@ analytics:
 
 # Site Author
 author:
-  avatar           : "ea.png"
+  avatar           : "/ea.png"
   bio              : "PhD candidate at Charité Universitätsmedizin – Berlin"
   location         : "Berlin, Germany"
   researchgate     : "https://www.researchgate.net/profile/Enrique-Alonso-Perez"
@@ -148,9 +141,6 @@ collections:
     output: true
     permalink: /:collection/:path/
   publications:
-    output: true
-    permalink: /:collection/:path/
-  portfolio:
     output: true
     permalink: /:collection/:path/
   talks:
