--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "About"
-    url: https://e-alonsop.github.io/
+    url: /https://e-alonsop.github.io/
     
   - title: "Publications"
     url: /publications/ 
