--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ locale                   : "en-US"
 title                    : "Enrique Alonso-Perez"
 name                     : &name "Enrique Alonso-Perez"
 description              : &description "&copy; 2023 Enrique Alonso-Perez."
+url                      : https://e-alonsop.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -69,7 +70,7 @@ analytics:
 
 # Site Author
 author:
-  avatar           : /ea.png/
+  avatar           : "ea.png"
   bio              : "PhD candidate at Charité Universitätsmedizin – Berlin"
   researchgate     : "https://www.researchgate.net/profile/Enrique-Alonso-Perez"
   orcid            : "https://orcid.org/0000-0002-0228-5084"
