--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "About"
-    url: /about.html/
+    url: /archive-layout-with-content/
     
   - title: "Publications"
     url: /publications/ 
@@ -13,4 +13,4 @@ main:
     url: /cv/
 
   - title: "Contact"
-    url: /teaching/
+    url: /guideline/
