--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,8 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          : G-NMVFFE4DDF
+    google_analytics: G-NMVFFE4DDF
 
 
 # Site Author
